--- a/calibration-demo/demo.html
+++ b/calibration-demo/demo.html
@@ -17,7 +17,7 @@
     <script src="jspsych/plugin-preload.js"></script>
     <link href="jspsych/jspsych.css" rel="stylesheet" type="text/css" />
     <script src="https://unpkg.com/@jspsych/plugin-call-function@1.1.2"></script>
-    <script src="https://unpkg.com/@jspsych/plugin-fullscreen@1.1.2"></script> -->
+    <script src="https://unpkg.com/@jspsych/plugin-fullscreen@1.1.2"></script> type="module" -->
     <script src="../dist/main.js"></script>
     <script src="./demo.js" type="module"></script>
 
