moved jspsych out of src code, set falbbacks to false for deps of face-api and p5js

--- a/demo/calibration-demo/demo.html
+++ b/demo/calibration-demo/demo.html
@@ -9,15 +9,15 @@
     <link rel="stylesheet" href="../styles/main.css">
     <!-- <script src="./utils/parameters.js"></script>
     <script src="jatos.js"></script>
-    <script src="js/eyetrack_html.js" type="module"></script>
+    <script src="js/eyetrack_html.js" type="module"></script>-->
 
-    <script src="jspsych/jspsych.js"></script>
-    <script src="jspsych/plugin-html-keyboard-response.js"></script>
-    <script src="jspsych/plugin-image-keyboard-response.js"></script>
-    <script src="jspsych/plugin-preload.js"></script>
-    <link href="jspsych/jspsych.css" rel="stylesheet" type="text/css" />
+    <script src="../jspsych/jspsych.js"></script>
+    <script src="../jspsych/plugin-html-keyboard-response.js"></script>
+    <script src="../jspsych/plugin-image-keyboard-response.js"></script>
+    <script src="../jspsych/plugin-preload.js"></script>
+    <link href="../jspsych/jspsych.css" rel="stylesheet" type="text/css" />
     <script src="https://unpkg.com/@jspsych/plugin-call-function@1.1.2"></script>
-    <script src="https://unpkg.com/@jspsych/plugin-fullscreen@1.1.2"></script> type="module" -->
+    <script src="https://unpkg.com/@jspsych/plugin-fullscreen@1.1.2"></script> type="module"
     <script src="../dist/main.js"></script>
     <script src="./demo.js" type="module"></script>
 
