bundle is bundling, added boostrap, working on imgs now

--- a/demo/calibration-demo/demo.html
+++ b/demo/calibration-demo/demo.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../styles/main.css">
+    <!-- <link rel="stylesheet" href="../styles/main.css"> -->
     <!-- <script src="./utils/parameters.js"></script>
     <script src="jatos.js"></script>
     <script src="js/eyetrack_html.js" type="module"></script>-->
@@ -17,9 +17,9 @@
     <script src="../jspsych/plugin-preload.js"></script>
     <link href="../jspsych/jspsych.css" rel="stylesheet" type="text/css" />
     <script src="https://unpkg.com/@jspsych/plugin-call-function@1.1.2"></script>
-    <script src="https://unpkg.com/@jspsych/plugin-fullscreen@1.1.2"></script> type="module"
-    <script src="../dist/main.js"></script>
-    <script src="./demo.js" type="module"></script>
+    <script src="https://unpkg.com/@jspsych/plugin-fullscreen@1.1.2"></script>
+    <script src="../../dist/main.js"></script>
+    <script src="./demo.js" ></script>
 
 
     
@@ -34,8 +34,7 @@
     <script src="./js/eyetracker.js" type="module"></script>
     <link rel="preload" href="./js/lib/p5.min_mod.js" as="script"></link>
     <script src="./js/p5setup.js" type="module"></script>
-    <script src="./js/p5jsDraw.js" type="module"></script>
-   -->
+    <script src="./js/p5jsDraw.js" type="module"></script>-->
   
     
     <script>     
