--- a/demo/calibration-demo/demo.html
+++ b/demo/calibration-demo/demo.html
@@ -18,7 +18,8 @@
     <link href="../jspsych/jspsych.css" rel="stylesheet" type="text/css" />
     <script src="https://unpkg.com/@jspsych/plugin-call-function@1.1.2"></script>
     <script src="https://unpkg.com/@jspsych/plugin-fullscreen@1.1.2"></script>
-    <script src="../../dist/main.js"></script>
+    <!-- <script src="../../dist/main.js"></script> -->
+    <script src="https://deepeye.labs.vu.nl/resources/main.js"></script>
     <script src="./demo.js" ></script>
 
 
