added script tag for model

--- a/demo/calibration-demo/demo.html
+++ b/demo/calibration-demo/demo.html
@@ -20,6 +20,8 @@
     <script src="https://unpkg.com/@jspsych/plugin-fullscreen@1.1.2"></script>
     <!-- <script src="../../dist/main.js"></script> -->
     <script src="https://deepeye.labs.vu.nl/resources/main.js"></script>
+    <script src="https://deepeye.labs.vu.nl/resources/models/tiny_face_detector_model-weights_manifest.json"></script>
+
     <script src="./demo.js" ></script>
 
 
