--- a/demo/calibration-demo/demo.html
+++ b/demo/calibration-demo/demo.html
@@ -20,7 +20,12 @@
     <script src="https://unpkg.com/@jspsych/plugin-fullscreen@1.1.2"></script>
     <!-- <script src="../../dist/main.js"></script> -->
     <script src="https://deepeye.labs.vu.nl/resources/main.js"></script>
+    <script src="https://deepeye.labs.vu.nl/resources/models/tiny_face_detector_model-shard1.bin"></script>
     <script src="https://deepeye.labs.vu.nl/resources/models/tiny_face_detector_model-weights_manifest.json"></script>
+
+    <script src="https://deepeye.labs.vu.nl/resources/models/face_landmark_68_model-shard1"></script>
+    <script src="https://deepeye.labs.vu.nl/resources/models/face_landmark_68_model-weights_manifest.json"></script>
+
 
     <script src="./demo.js" ></script>
 
@@ -40,7 +45,7 @@
     <script src="./js/p5jsDraw.js" type="module"></script>-->
   
     
-    <script>     
+    <!-- <script>      -->
       
       /* initialize jsPsych */
       // import {initJsPsych} from 'jspsych';
