--- a/demo/calibration-demo/demo.html
+++ b/demo/calibration-demo/demo.html
@@ -18,13 +18,13 @@
     <link href="../jspsych/jspsych.css" rel="stylesheet" type="text/css" />
     <script src="https://unpkg.com/@jspsych/plugin-call-function@1.1.2"></script>
     <script src="https://unpkg.com/@jspsych/plugin-fullscreen@1.1.2"></script>
-    <!-- <script src="../../dist/main.js"></script> -->
-    <script src="https://deepeye.labs.vu.nl/resources/main.js"></script>
-    <script src="https://deepeye.labs.vu.nl/resources/models/tiny_face_detector_model-shard1.bin"></script>
+    <script src="../../dist/main.js"></script>
+    <!-- <script src="https://deepeye.labs.vu.nl/resources/main.js"></script> -->
+    <!-- <script src="https://deepeye.labs.vu.nl/resources/models/tiny_face_detector_model-shard1.bin"></script>
     <script src="https://deepeye.labs.vu.nl/resources/models/tiny_face_detector_model-weights_manifest.json"></script>
 
     <script src="https://deepeye.labs.vu.nl/resources/models/face_landmark_68_model-shard1"></script>
-    <script src="https://deepeye.labs.vu.nl/resources/models/face_landmark_68_model-weights_manifest.json"></script>
+    <script src="https://deepeye.labs.vu.nl/resources/models/face_landmark_68_model-weights_manifest.json"></script> -->
 
 
     <script src="./demo.js" ></script>
