--- a/demo/demo-from-server/demo.html
+++ b/demo/demo-from-server/demo.html
@@ -6,10 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-    <!-- <link rel="stylesheet" href="../styles/main.css"> -->
-    <!-- <script src="./utils/parameters.js"></script>
-    <script src="jatos.js"></script>
-    <script src="js/eyetrack_html.js" type="module"></script>-->
 
     <script src="../jspsych/jspsych.js"></script>
     <script src="../jspsych/plugin-html-keyboard-response.js"></script>
@@ -18,17 +14,14 @@
     <link href="../jspsych/jspsych.css" rel="stylesheet" type="text/css" />
     <script src="https://unpkg.com/@jspsych/plugin-call-function@1.1.2"></script>
     <script src="https://unpkg.com/@jspsych/plugin-fullscreen@1.1.2"></script>
-    <!-- <script src="../../dist/main.js"></script> -->
-    <script src="https://deepeye.labs.vu.nl/resources/main.js"></script>
-    <!-- <script src="https://deepeye.labs.vu.nl/resources/models/tiny_face_detector_model-shard1.bin"></script>
-    <script src="https://deepeye.labs.vu.nl/resources/models/tiny_face_detector_model-weights_manifest.json"></script> -->
 
+
+    <script src="https://deepeye.labs.vu.nl/resources/main.js"></script>
     <script src="https://deepeye.labs.vu.nl/resources/models/face_landmark_68_model-shard1"></script>
     <script src="https://deepeye.labs.vu.nl/resources/models/face_landmark_68_model-weights_manifest.json"></script>
     <script src="https://deepeye.labs.vu.nl/resources/models/tiny_face_detector_model-shard1"></script>
     <script src="https://deepeye.labs.vu.nl/resources/models/tiny_face_detector_model-weights_manifest"></script>
-
-
+    <link rel="preload" href="https://deepeye.labs.vu.nl/resources/dependencies/p5.min_mod.js" as="script"></link>
     <script src="./demo.js" ></script>
 
 
