--- a/demo/demo-from-server/demo.html
+++ b/demo/demo-from-server/demo.html
@@ -20,7 +20,7 @@
     <script src="https://deepeye.labs.vu.nl/resources/models/face_landmark_68_model-shard1"></script>
     <script src="https://deepeye.labs.vu.nl/resources/models/face_landmark_68_model-weights_manifest.json"></script>
     <script src="https://deepeye.labs.vu.nl/resources/models/tiny_face_detector_model-shard1"></script>
-    <script src="https://deepeye.labs.vu.nl/resources/models/tiny_face_detector_model-weights_manifest"></script>
+    <script src="https://deepeye.labs.vu.nl/resources/models/tiny_face_detector_model-weights_manifest.json"></script>
     <link rel="preload" href="https://deepeye.labs.vu.nl/resources/dependencies/p5.min_mod.js" as="script"></link>
     <script src="./demo.js" ></script>
 
