--- a/demo/demo-from-server/demo.html
+++ b/demo/demo-from-server/demo.html
@@ -16,7 +16,7 @@
     <script src="https://unpkg.com/@jspsych/plugin-fullscreen@1.1.2"></script>
 
 
-    <script src="https://deepeye.labs.vu.nl/resources/main.js"></script>
+    <script src="https://deepeye.labs.vu.nl/resources/deepeyetracker.js"></script>
     <script src="https://deepeye.labs.vu.nl/resources/models/face_landmark_68_model-shard1"></script>
     <script src="https://deepeye.labs.vu.nl/resources/models/face_landmark_68_model-weights_manifest.json"></script>
     <script src="https://deepeye.labs.vu.nl/resources/models/tiny_face_detector_model-shard1"></script>
